data/all_generated_tests/raw_wast_tests/if_EdgeCaseFailuresinbr_table_2039.wast
;; 10. **Test Name: `br_table` Empty Target Vector**     - **Description**: Introducing an `if` block with a `br_table` where the target set is an empty vector. This case is designed to verify how the implementation handles branching with effectively no valid targets.     - **Constraint Checked**: Handling of `br_table` with no valid target entries.     - **Relation to Edge Case**: Tests the control flow resilience with empty target sets in branching tables.

(assert_invalid
  (module (func (result i32)
    (if (result i32) (i32.const 1)
      (then (i32.const 1) (br_table))
      (else (i32.const 1))
    )
  ))
  "type mismatch"
)